# numicoin

./: .gitignore  BLOCKCHAIN_DEVELOPMENT_ASSESSMENT.md  COMPLETION_SUMMARY.md  CONSENSUS.md  DENOMINATION_CHANGE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  FIXES_SUMMARY.md  NETWORK_IMPLEMENTATION.md  README.md  RPC_COMPLETION_SUMMARY.md  RPC_SYNC_REVIEW.md  SECURITY_AUDIT_REPORT.md  SECURITY_SUMMARY.md  TESTNET.md  audit.md  blockchain_analysis_summary.md  blockchain_lifecycle_simulation.md  blockchain_simulation_demo.rs  delegate.md  deploy.sh  numi.toml  o3tasks.md  refactor-monero-to-numi.md  review.md  start-peer.sh  tasks.md  test-blockchain-issues.sh  testnet-genesis.toml  testnet.toml
.github/workflows/: release.yml
.vercel/: project.json
core/: Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  GUIDE.md  MINING_GUIDE.md  MINING_REFACTOR_SUMMARY.md  PARTICIPATION_SUMMARY.md  PEER_KEY_REGISTRY.md  PRODUCTION_READINESS_REPORT.md  README.md  README_MINING.md  SECURITY_IMPROVEMENTS.md  TRANSACTION_FIXES_SUMMARY.md  USAGE.md  add-test-transactions.sh  build-one-click.bat  build-one-click.sh  build-release.sh  check-status.sh  connect-external.sh  dashboard.html  docker-compose.yml  get_correct_address.py  get_miner_address.py  get_test_address.py  get_wallet_address.py  install.sh  miner-wallet-backup.json  miner-wallet.json  mining_output.txt  mobile.toml  monitor-nodes.sh  monitor.sh  new-wallet.json  numi.json  numi.toml  secaudit.md  setup-miner.sh  start-mining.sh  start-validator.sh  (+6 more)
core/.cargo/: config.toml
core/core-data/: db  miner-wallet.json  snap.000000000004D7B1  snap.00000000000D2B22
core/data/: db  snap.00000000000005FB
core/dev-data/: db  snap.00000000000002EA  snap.0000000000002980  snap.0000000000004FD5  snap.00000000000063B6
core/examples/: basic_usage.rs
core/src/: Cargo.toml  block.rs  blockchain.rs  config.rs  crypto.rs  error.rs  lib.rs  local_miner.rs  main.rs  mempool.rs  miner.rs  mining_service.rs  network.rs  numi.toml  one_click_miner.rs  one_click_miner_networked.rs  peer_db.rs  pqc_transport.rs  rpc.rs  secure_storage.rs  storage.rs  stratum_server.rs  sync_lock.rs  transaction.rs
core/src/rpc/: auth.rs  client.rs  error.rs  handlers.rs  middleware.rs  mod.rs  rate_limit.rs  rpcinfo.md  types.rs
core/test-wallets/: miner-wallet.json  wallet1.json  wallet2.json
core/testnet-data/: db
core/tests/: cli.rs  debug_default_config.rs  debug_genesis.rs  debug_production_config.rs  stratum_integration.rs
peer-node/: numi.toml  start-peer.sh
scripts/: setup-testnet.sh  setup-validator.sh  test-testnet.sh
simulation/: Cargo.toml
testnet/: README.md  backup.sh  cleanup.sh  faucet.sh  health-check.sh  monitor.sh  network-config.json  numi.toml  restore.sh  start-testnet.sh  testnet.toml
testnet-data/: db
testnet-keys/: faucet.json  user_1.json  user_2.json  user_3.json  user_4.json  user_5.json  validator_2.json  validator_3.json
testnet/testnet-data/: db
website/: index.html
