[package]
name = "numi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Quantum-safe cryptography (placeholder - would need proper liboqs integration)
# liboqs = "0.8.0"

# Hashing and cryptography
blake3 = "1.5"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Networking (Future: libp2p integration)
# libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "macros", "floodsub", "yamux"] }
tokio = { version = "1.0", features = ["full"] }

# Database and storage
sled = "0.34"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"

# Async runtime
async-trait = "0.1"

# Web framework for RPC API
warp = "0.3"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
