[package]
name = "numi-core"
version = "0.1.0"
edition = "2021"

# Multiple binaries
[[bin]]
name = "numi-core"
path = "src/main.rs"

[dependencies]

pqcrypto-dilithium = { version = "0.5", optional = true } # Temporary quantum-safe crypto
pqcrypto-traits = "0.3" # Required traits for pqcrypto
pqcrypto-kyber = "0.7" # Post-quantum KEM for handshake
oqs = { version = "0.9", optional = true }
base64ct = "1.7.1" # Allow semver-compatible patch releases without pinning

# Hashing and cryptography
blake3 = "1.4"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
subtle = "2.4" # Constant-time operations
rand = "0.8" # Cryptographically secure randomness

# Networking with libp2p for production P2P
libp2p = { version = "0.56", features = ["tokio", "tcp", "noise", "tls", "macros", "floodsub", "yamux", "mdns", "identify", "ping", "kad", "secp256k1"] } # TODO: Upgrade to 0.58+
tokio = { version = "1.0", features = ["full"] }

# Database and storage with better error handling
sled = "0.34"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8" # Configuration file parsing

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
fs2 = "0.4" # File locking utility
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
num_cpus = "1.16" # CPU core detection for mining
bs58 = "0.4" # Base58 encoding/decoding
ripemd = "0.1" # RIPEMD160 hashing

# Async runtime
async-trait = "0.1"
futures = "0.3"

# Web framework for RPC API with security features
warp = { version = "0.3", features = ["tls"] }
tower = "0.4" # Middleware for rate limiting
tower-http = { version = "0.4", features = ["cors", "trace", "timeout", "limit"] }

# Performance and concurrency
rayon = "1.7" # For parallel mining
parking_lot = "0.12" # Faster RwLock
dashmap = "5.4" # Concurrent HashMap

# Encryption for key storage
aes-gcm = "0.10"
zeroize = { version = "1.3", features = ["zeroize_derive"] }

# Backup and restore utilities
tar = "0.4"
flate2 = "1.0"
fs_extra = "1.3" # For atomic file operations

# Networking and security - Updated to fix vulnerabilities
dns-lookup = "2.0"
hickory-resolver = "0.24" # Updated from trust-dns-resolver
num-bigint = "0.4.6"
num-traits = "0.2"
jsonwebtoken = "8"
serde_yaml = "0.9.34"

reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
proptest = "1.4" # Property-based testing
assert_cmd = "2.0"
predicates = "2.1"

[features]
default = ["std", "temporary-pqcrypto"]
std = []

temporary-pqcrypto = ["pqcrypto-dilithium"]

# Enable when real liboqs is available (disables temporary pqcrypto)
real-liboqs = ["oqs"]
